--- a/backendexpress/package.json
+++ b/backendexpress/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "backendexpress",
+  "name": "backend",
+  "main": "app.js",
+  "type": "module",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "express practice",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "tablatin",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@prisma/client": "^5.15.0",
     "express": "^4.19.2"
   },
   "devDependencies": {
     "prisma": "^5.15.0"
-  }
+  },
+  "keywords": []
 }
